src/objects/Loan_Payment_Collection__c.object
<CustomObject>
    <description>Payment Collection</description>
    <fields>
        <fullName>Actual_Collected_Amount__c</fullName>
        <description>Actual Collected Amount</description>
        <inlineHelpText>Actual Collected Amount</inlineHelpText>
        <label>Actual Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client</description>
        <inlineHelpText>Client</inlineHelpText>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Loan Payment Collection Records</relationshipLabel>
        <relationshipName>Loan_Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <description>Collection Date</description>
        <inlineHelpText>Collection Date</inlineHelpText>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Fees__c</fullName>
        <description>Due Fees</description>
        <inlineHelpText>Due Fees</inlineHelpText>
        <label>Due Fees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Interest__c</fullName>
        <description>Due Interest</description>
        <inlineHelpText>Due Interest</inlineHelpText>
        <label>Due Interest</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Penalty__c</fullName>
        <description>Due Penalty</description>
        <inlineHelpText>Due Penalty</inlineHelpText>
        <label>Due Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Principal__c</fullName>
        <description>Due Principal</description>
        <inlineHelpText>Due Principal</inlineHelpText>
        <label>Due Principal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_On_Total_Overdue__c</fullName>
        <description>Interest on total overdue</description>
        <inlineHelpText>Interest on total overdue</inlineHelpText>
        <label>Interest On Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Account</description>
        <inlineHelpText>Loan Account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Collection Records</relationshipLabel>
        <relationshipName>Loan_Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Total_Due_Fees__c</fullName>
        <description>Net Total due fee to be collected.</description>
        <inlineHelpText>Net Total due fee to be collected.</inlineHelpText>
        <label>Net Total Due Fees</label>
        <summarizedField>Collection_Fee__c.Collection_Fee_Amount__c</summarizedField>
        <summaryForeignKey>Collection_Fee__c.Loan_Payment_Collection_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue fees from previous installments</description>
        <inlineHelpText>Overdue fees from previous installments</inlineHelpText>
        <label>Overdue Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue interest from previous installments</description>
        <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
        <label>Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue penalty from previous installments</description>
        <inlineHelpText>Overdue penalty from previous installments</inlineHelpText>
        <label>Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue principal from previous installments</description>
        <inlineHelpText>Overdue principal from previous installments</inlineHelpText>
        <label>Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment Collected</description>
        <inlineHelpText>Payment Collected</inlineHelpText>
        <label>Payment Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repayment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Repayment Schedule</description>
        <inlineHelpText>Repayment Schedule</inlineHelpText>
        <label>Repayment Schedule</label>
        <referenceTo>Repayment_Schedule__c</referenceTo>
        <relationshipName>Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Collection_Amount__c</fullName>
        <formula>Net_Total_Due_Fees__c   +  Due_Interest__c  +  Due_Principal__c +  Overdue_Fees__c +  Overdue_Interest__c +  Overdue_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Payment Collection Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Id__c</columns>
        <columns>Attendance__c</columns>
        <columns>Client__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Due_Fees__c</columns>
        <columns>Due_Interest__c</columns>
        <columns>Due_Penalty__c</columns>
        <columns>Due_Principal__c</columns>
        <columns>Loan_Account__c</columns>
        <columns>Repayment_Schedule__c</columns>
        <columns>Total_Collection_Amount__c</columns>
        <columns>Actual_Collected_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Payment Collection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Collection Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>